fix: stop text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 main, #intestazione, footer {
-    width: 1700px;
+    width: 1650px;
 }
 
 /* Header */
